[package]
name = "aiterm"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11.0", features = ["history"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.27.0"